--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             text-align: center;
         }
         .template{
-            height:85%;
+            height:auto;
             width:100%;
             background-color: rgb(54, 52, 52);
             display: flex;
         }
         .example{
-            height:100%;
+            height:auto;
             margin-left:auto;
             width: 30%;
             border-bottom-left-radius: 30px;
